meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/snapshots/memfaultd__metrics__metric_report_manager__tests__hrt_when_enabled.snap
---
source: memfaultd/src/metrics/metric_report_manager.rs
expression: hrt_report_serialized
---
{
  "schema_version": 1,
  "producer": {
    "id": "memfaultd",
    "version": "[version]"
  },
  "start_time": "[start_time]",
  "duration_ms": "[duration]",
  "rollups": [
    {
      "metadata": {
        "string_key": "bar",
        "metric_type": "gauge",
        "data_type": "double",
        "internal": false
      },
      "data": [
        {
          "t": "[timestamp]",
          "value": 2.0
        }
      ]
    },
    {
      "metadata": {
        "string_key": "baz",
        "metric_type": "gauge",
        "data_type": "double",
        "internal": false
      },
      "data": [
        {
          "t": "[timestamp]",
          "value": 3.0
        }
      ]
    },
    {
      "metadata": {
        "string_key": "foo",
        "metric_type": "gauge",
        "data_type": "double",
        "internal": false
      },
      "data": [
        {
          "t": "[timestamp]",
          "value": 1.0
        }
      ]
    }
  ]
}
